refix swagger
